--- a/Hawaii/UI/Storyboard/History.storyboard
+++ b/Hawaii/UI/Storyboard/History.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bXa-Ox-ldH">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -16,11 +16,11 @@
             <objects>
                 <viewController id="zWB-Za-5S8" customClass="HistoryViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MYe-PJ-XJf">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="724"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Psb-gj-8sZ">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="641"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -48,40 +48,34 @@
             <objects>
                 <viewController modalPresentationStyle="overFullScreen" id="vKj-nw-7BJ" customClass="SearchRequestsViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ncC-42-5es">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dJz-Fa-i4D">
-                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                                <rect key="frame" x="16" y="44" width="343" height="734"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iz3-P0-5yg">
-                                <rect key="frame" x="0.0" y="61" width="375" height="237"/>
+                                <rect key="frame" x="0.0" y="85" width="375" height="242"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yNP-vg-qO9">
-                                        <rect key="frame" x="106" y="5" width="163" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yNP-vg-qO9">
+                                        <rect key="frame" x="30" y="30" width="34" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="j9e-Tl-qEx">
-                                        <rect key="frame" x="0.0" y="26" width="375" height="60"/>
+                                    <pickerView contentMode="scaleToFill" horizontalCompressionResistancePriority="700" translatesAutoresizingMaskIntoConstraints="NO" id="Poz-Fr-B2z">
+                                        <rect key="frame" x="94" y="16" width="251" height="50"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="60" id="YE7-DB-o2p"/>
+                                            <constraint firstAttribute="height" constant="50" id="DMc-7C-geR"/>
                                         </constraints>
-                                        <date key="date" timeIntervalSinceReferenceDate="555838467.66364503">
-                                            <!--2018-08-13 07:34:27 +0000-->
-                                        </date>
-                                    </datePicker>
-                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="ef9-UH-hPi">
-                                        <rect key="frame" x="0.0" y="127" width="375" height="60"/>
-                                        <date key="date" timeIntervalSinceReferenceDate="555838470.43928003">
-                                            <!--2018-08-13 07:34:30 +0000-->
-                                        </date>
-                                    </datePicker>
+                                    </pickerView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LtP-SE-lqO">
-                                        <rect key="frame" x="20" y="197" width="335" height="30"/>
-                                        <state key="normal" title="Button"/>
+                                        <rect key="frame" x="30" y="96" width="315" height="30"/>
+                                        <state key="normal" title="Filter"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="buttonStyle" value="redAndRounded"/>
+                                        </userDefinedRuntimeAttributes>
                                         <connections>
                                             <action selector="searchClicked:" destination="vKj-nw-7BJ" eventType="touchUpInside" id="QEU-Li-qBl"/>
                                         </connections>
@@ -89,50 +83,35 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="ef9-UH-hPi" firstAttribute="leading" secondItem="j9e-Tl-qEx" secondAttribute="leading" id="Gks-A5-boT"/>
-                                    <constraint firstItem="LtP-SE-lqO" firstAttribute="top" secondItem="ef9-UH-hPi" secondAttribute="bottom" constant="10" id="I7n-LE-NfF"/>
-                                    <constraint firstItem="ef9-UH-hPi" firstAttribute="centerX" secondItem="j9e-Tl-qEx" secondAttribute="centerX" id="J6P-CK-5dt"/>
-                                    <constraint firstItem="j9e-Tl-qEx" firstAttribute="leading" secondItem="Iz3-P0-5yg" secondAttribute="leading" id="Lmw-Ph-ued"/>
-                                    <constraint firstItem="j9e-Tl-qEx" firstAttribute="centerX" secondItem="Iz3-P0-5yg" secondAttribute="centerX" id="Spp-7r-Vtc"/>
-                                    <constraint firstItem="ef9-UH-hPi" firstAttribute="height" secondItem="j9e-Tl-qEx" secondAttribute="height" id="ZRP-EP-jhG"/>
-                                    <constraint firstItem="j9e-Tl-qEx" firstAttribute="top" secondItem="yNP-vg-qO9" secondAttribute="bottom" id="cUw-wv-sRR"/>
-                                    <constraint firstItem="yNP-vg-qO9" firstAttribute="top" secondItem="Iz3-P0-5yg" secondAttribute="top" constant="5" id="dxo-9j-j2i"/>
-                                    <constraint firstItem="yNP-vg-qO9" firstAttribute="centerX" secondItem="Iz3-P0-5yg" secondAttribute="centerX" id="edS-hr-xE0"/>
-                                    <constraint firstItem="LtP-SE-lqO" firstAttribute="leading" secondItem="Iz3-P0-5yg" secondAttribute="leading" constant="20" id="lEA-zo-Het"/>
-                                    <constraint firstItem="yNP-vg-qO9" firstAttribute="leading" secondItem="Iz3-P0-5yg" secondAttribute="leading" constant="106" id="mmN-fz-slZ"/>
-                                    <constraint firstItem="LtP-SE-lqO" firstAttribute="centerX" secondItem="Iz3-P0-5yg" secondAttribute="centerX" id="o3n-ye-6Lu"/>
-                                    <constraint firstAttribute="bottom" secondItem="LtP-SE-lqO" secondAttribute="bottom" constant="10" id="oGG-Od-rp8"/>
+                                    <constraint firstItem="yNP-vg-qO9" firstAttribute="top" secondItem="Iz3-P0-5yg" secondAttribute="top" constant="30" id="Abr-Ge-Akp"/>
+                                    <constraint firstItem="LtP-SE-lqO" firstAttribute="leading" secondItem="Iz3-P0-5yg" secondAttribute="leading" constant="30" id="Awo-4d-Om5"/>
+                                    <constraint firstItem="yNP-vg-qO9" firstAttribute="leading" secondItem="Iz3-P0-5yg" secondAttribute="leading" constant="30" id="Hia-oC-kzo"/>
+                                    <constraint firstAttribute="trailing" secondItem="Poz-Fr-B2z" secondAttribute="trailing" constant="30" id="I3s-Xa-cox"/>
+                                    <constraint firstItem="Poz-Fr-B2z" firstAttribute="centerY" secondItem="yNP-vg-qO9" secondAttribute="centerY" id="UpZ-gg-mvi"/>
+                                    <constraint firstAttribute="trailing" secondItem="LtP-SE-lqO" secondAttribute="trailing" constant="30" id="abA-Fn-38N"/>
+                                    <constraint firstItem="Poz-Fr-B2z" firstAttribute="leading" secondItem="yNP-vg-qO9" secondAttribute="trailing" constant="30" id="cXP-nn-n0I"/>
+                                    <constraint firstItem="LtP-SE-lqO" firstAttribute="top" secondItem="Poz-Fr-B2z" secondAttribute="bottom" constant="30" id="uMj-L3-jUk"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hda-7k-KkB">
-                                <rect key="frame" x="106" y="157" width="162" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="hda-7k-KkB" firstAttribute="top" secondItem="j9e-Tl-qEx" secondAttribute="bottom" constant="10" id="05m-Pe-wKD"/>
                             <constraint firstItem="Iz3-P0-5yg" firstAttribute="top" secondItem="Bv3-WH-5uA" secondAttribute="top" constant="41" id="4mz-rb-N0u"/>
-                            <constraint firstItem="hda-7k-KkB" firstAttribute="centerX" secondItem="yNP-vg-qO9" secondAttribute="centerX" id="6Yu-hR-LRd"/>
-                            <constraint firstItem="ef9-UH-hPi" firstAttribute="top" secondItem="hda-7k-KkB" secondAttribute="bottom" constant="10" id="8GU-7X-7mU"/>
                             <constraint firstItem="dJz-Fa-i4D" firstAttribute="top" secondItem="ncC-42-5es" secondAttribute="topMargin" id="ABu-jg-Vxg"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dJz-Fa-i4D" secondAttribute="trailing" id="Chg-uJ-L1I"/>
                             <constraint firstItem="Iz3-P0-5yg" firstAttribute="leading" secondItem="Bv3-WH-5uA" secondAttribute="leading" id="GJI-le-M4J"/>
                             <constraint firstItem="Iz3-P0-5yg" firstAttribute="centerX" secondItem="Bv3-WH-5uA" secondAttribute="centerX" id="Jp8-1q-4bg"/>
                             <constraint firstAttribute="bottomMargin" secondItem="dJz-Fa-i4D" secondAttribute="bottom" id="NHC-Th-oPI"/>
-                            <constraint firstItem="hda-7k-KkB" firstAttribute="leading" secondItem="yNP-vg-qO9" secondAttribute="leading" id="lxf-pg-IE6"/>
                             <constraint firstItem="dJz-Fa-i4D" firstAttribute="leading" secondItem="ncC-42-5es" secondAttribute="leadingMargin" id="n5x-ld-dhE"/>
+                            <constraint firstItem="Bv3-WH-5uA" firstAttribute="bottom" secondItem="Iz3-P0-5yg" secondAttribute="bottom" constant="451" id="wQS-vb-3yn"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Bv3-WH-5uA"/>
                     </view>
                     <connections>
+                        <outlet property="backgroundView" destination="Iz3-P0-5yg" id="lUy-Cs-bmp"/>
                         <outlet property="clickableView" destination="dJz-Fa-i4D" id="ICJ-3H-mJY"/>
-                        <outlet property="fromLabel" destination="yNP-vg-qO9" id="Fux-SE-KLW"/>
-                        <outlet property="fromPicker" destination="j9e-Tl-qEx" id="DsE-NI-ztK"/>
-                        <outlet property="toLabel" destination="hda-7k-KkB" id="JqI-fS-IYW"/>
-                        <outlet property="toPicker" destination="ef9-UH-hPi" id="nIR-sM-QNj"/>
+                        <outlet property="yearLabel" destination="yNP-vg-qO9" id="DZz-EX-GOM"/>
+                        <outlet property="yearPicker" destination="Poz-Fr-B2z" id="9RC-00-6Pk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JXT-7M-KaM" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -147,7 +126,7 @@
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="Luz-l6-rOV">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
