--- a/Hawaii/UI/Storyboard/Dashboard.storyboard
+++ b/Hawaii/UI/Storyboard/Dashboard.storyboard
@@ -210,19 +210,19 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="641"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mbA-zw-bHL">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="622"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="822"/>
                                         <subviews>
                                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nbP-La-4tE">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="500"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="300" id="D76-jS-5iU"/>
+                                                    <constraint firstAttribute="height" constant="500" id="D76-jS-5iU"/>
                                                 </constraints>
                                                 <connections>
                                                     <segue destination="Qer-bd-5aa" kind="embed" identifier="showDatePickerViewController" id="2Hz-vC-znZ"/>
                                                 </connections>
                                             </containerView>
                                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IhI-CR-CNN">
-                                                <rect key="frame" x="0.0" y="308" width="375" height="128"/>
+                                                <rect key="frame" x="0.0" y="508" width="375" height="128"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="128" id="11c-rF-VGd"/>
                                                 </constraints>
@@ -231,7 +231,7 @@
                                                 </connections>
                                             </containerView>
                                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zcU-Ln-llf">
-                                                <rect key="frame" x="0.0" y="446" width="375" height="120"/>
+                                                <rect key="frame" x="0.0" y="646" width="375" height="120"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="120" id="6u8-lM-EWQ"/>
                                                 </constraints>
@@ -487,11 +487,15 @@
             <objects>
                 <viewController id="Qer-bd-5aa" customClass="DatePickerViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="afa-Ke-xqd">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="500"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XLc-5w-1Pj">
+                                <rect key="frame" x="0.0" y="44" width="375" height="422"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rre-HC-BMC">
-                                <rect key="frame" x="20" y="10" width="335" height="21"/>
+                                <rect key="frame" x="20" y="2000" width="335" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -500,7 +504,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="EeG-bj-h9t" customClass="WhiteUIPicker" customModule="Hawaii" customModuleProvider="target">
-                                <rect key="frame" x="10" y="41" width="355" height="100"/>
+                                <rect key="frame" x="10" y="4021" width="355" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="eWH-CT-pBz"/>
                                 </constraints>
@@ -512,7 +516,7 @@
                                 </connections>
                             </datePicker>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="End date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JJR-yx-EbL">
-                                <rect key="frame" x="20" y="151" width="335" height="21"/>
+                                <rect key="frame" x="20" y="4131" width="335" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -521,7 +525,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="B30-ko-KnE" customClass="WhiteUIPicker" customModule="Hawaii" customModuleProvider="target">
-                                <rect key="frame" x="10" y="182" width="355" height="100"/>
+                                <rect key="frame" x="10" y="4162" width="355" height="100"/>
                                 <date key="date" timeIntervalSinceReferenceDate="551889391.40092003">
                                     <!--2018-06-28 14:36:31 +0000-->
                                 </date>
@@ -533,14 +537,18 @@
                             <constraint firstItem="JJR-yx-EbL" firstAttribute="top" secondItem="EeG-bj-h9t" secondAttribute="bottom" constant="10" id="4xp-Ap-SUM"/>
                             <constraint firstItem="JJR-yx-EbL" firstAttribute="leading" secondItem="rre-HC-BMC" secondAttribute="leading" id="5eK-bJ-5Zx"/>
                             <constraint firstItem="EeG-bj-h9t" firstAttribute="centerX" secondItem="afa-Ke-xqd" secondAttribute="centerX" id="8NV-xU-FM3"/>
-                            <constraint firstItem="EeG-bj-h9t" firstAttribute="top" secondItem="rre-HC-BMC" secondAttribute="bottom" constant="10" id="9jk-V1-DNa"/>
+                            <constraint firstItem="EeG-bj-h9t" firstAttribute="top" secondItem="rre-HC-BMC" secondAttribute="bottom" constant="2000" id="9jk-V1-DNa"/>
+                            <constraint firstItem="XLc-5w-1Pj" firstAttribute="centerY" secondItem="73J-fT-pgL" secondAttribute="centerY" id="CoH-c3-cuY"/>
+                            <constraint firstItem="XLc-5w-1Pj" firstAttribute="leading" secondItem="73J-fT-pgL" secondAttribute="leading" id="DkX-oG-kti"/>
                             <constraint firstItem="EeG-bj-h9t" firstAttribute="height" secondItem="B30-ko-KnE" secondAttribute="height" id="H5A-iu-AJN"/>
-                            <constraint firstItem="rre-HC-BMC" firstAttribute="top" secondItem="afa-Ke-xqd" secondAttribute="top" constant="10" id="NZP-BX-Fkf"/>
+                            <constraint firstItem="rre-HC-BMC" firstAttribute="top" secondItem="afa-Ke-xqd" secondAttribute="top" constant="2000" id="NZP-BX-Fkf"/>
+                            <constraint firstItem="XLc-5w-1Pj" firstAttribute="top" secondItem="73J-fT-pgL" secondAttribute="top" id="Uvz-NX-cb8"/>
                             <constraint firstItem="B30-ko-KnE" firstAttribute="top" secondItem="JJR-yx-EbL" secondAttribute="bottom" constant="10" id="iN4-Yc-lPF"/>
                             <constraint firstItem="rre-HC-BMC" firstAttribute="leading" secondItem="afa-Ke-xqd" secondAttribute="leading" constant="20" id="ms5-Lf-rdT"/>
                             <constraint firstItem="rre-HC-BMC" firstAttribute="centerX" secondItem="afa-Ke-xqd" secondAttribute="centerX" id="n2v-GZ-cWa"/>
                             <constraint firstItem="B30-ko-KnE" firstAttribute="centerX" secondItem="EeG-bj-h9t" secondAttribute="centerX" id="qXy-uD-Flg"/>
                             <constraint firstItem="EeG-bj-h9t" firstAttribute="leading" secondItem="afa-Ke-xqd" secondAttribute="leading" constant="10" id="sQl-4T-qTK"/>
+                            <constraint firstItem="XLc-5w-1Pj" firstAttribute="centerX" secondItem="73J-fT-pgL" secondAttribute="centerX" id="whY-dI-bNj"/>
                             <constraint firstItem="JJR-yx-EbL" firstAttribute="centerX" secondItem="rre-HC-BMC" secondAttribute="centerX" id="xB0-ES-MSQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="73J-fT-pgL"/>
@@ -550,6 +558,7 @@
                         <outlet property="endDatePicker" destination="B30-ko-KnE" id="AQg-oD-cDm"/>
                         <outlet property="startDateLabel" destination="rre-HC-BMC" id="3Q8-hJ-Agf"/>
                         <outlet property="startDatePicker" destination="EeG-bj-h9t" id="tBf-Ai-wKe"/>
+                        <outlet property="tableView" destination="XLc-5w-1Pj" id="cjV-JX-Dt1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i4F-BV-80z" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -768,9 +777,9 @@
         <image name="calendar" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="9YR-6r-Hjh"/>
-        <segue reference="7Qi-Z7-6Yo"/>
-        <segue reference="C16-ZN-r4V"/>
+        <segue reference="g7F-bN-lNv"/>
+        <segue reference="ntj-IY-5Sk"/>
+        <segue reference="2Hz-vC-znZ"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
